--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,8 @@ dnl configure.in for libevent
 dnl Dug Song <dugsong@monkey.org>
 AC_INIT(event.c)
 
-AC_CONFIG_HEADER(config.h)
+AM_INIT_AUTOMAKE(libevent,0.4)
+AM_CONFIG_HEADER(config.h)
 
 dnl Initialize prefix.
 if test "$prefix" = "NONE"; then
