further automake conversion
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@10 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,16 @@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
+SUBDIRS = . sample
+
 EXTRA_DIST = acconfig.h
 
 lib_LIBRARIES = libevent.a
 
-libevent_a_SOURCES = event.c select.c @EVSRCS@
+libevent_a_SOURCES = event.c
+libevent_a_LIBADD = @LIBOBJS@
 
 include_HEADERS = event.h
 
 man_MANS = event.3
+
+DISTCLEANFILES = *~
