initial support for signals (only for select now) based on code from Dug Song <dugsong@monkey.org>
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@17 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -3,9 +3,10 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 LDADD = -L.. -levent
 CPPFPLAGS = -I..
 
-noinst_PROGRAMS = event-test time-test
+noinst_PROGRAMS = event-test time-test signal-test
 
 event_test_sources = event-test.c
 time_test_sources = time-test.c
+signal_test_sources = signal-test.c
 
 DISTCLEANFILES = *~
