portability fixes from marius@umich.edu.
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@35 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -1,7 +1,8 @@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
 LDADD = -L.. -levent
-CPPFPLAGS = -I..
+CPPFPLAGS = -I.. 
+CFLAGS = -I../compat
 
 noinst_PROGRAMS = event-test time-test signal-test
 
