--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 
 SUBDIRS = . sample
 
-EXTRA_DIST = acconfig.h
+EXTRA_DIST = acconfig.h test/Makefile.in compat/err.h compat/sys/queue.h \
+             compat/sys/tree.h compat/sys/_time.h
 
 lib_LIBRARIES = libevent.a
 
@@ -11,7 +12,7 @@ libevent_a_LIBADD = @LIBOBJS@
 
 include_HEADERS = event.h
 
-INCLUDES = -I/usr/include -Icompat
+INCLUDES = -Icompat
 
 man_MANS = event.3
 
