--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
-SUBDIRS = . sample
+SUBDIRS = . sample test
 
 EXTRA_DIST = acconfig.h test/Makefile.in compat/err.h compat/sys/queue.h \
              compat/sys/tree.h compat/sys/_time.h
