more comprehensive regression test
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@46 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,11 +4,12 @@ LDADD = -L.. -levent
 CPPFPLAGS = -I.. 
 CFLAGS = -I../compat
 
-noinst_PROGRAMS = test-eof test-weof test-time
+noinst_PROGRAMS = test-eof test-weof test-time regress
 
 test_eof_sources = test-eof.c
 test_weof_sources = test-weof.c
 test_time_sources = test-time.c
+regress_sources = regress.c
 
 DISTCLEANFILES = *~
 
@@ -32,6 +33,13 @@ test: $(noinst_PROGRAMS)
 	fi
 	@echo -n " test-time: "
 	@if ./test-time >/dev/null ; \
+	then \
+		echo OKAY ; \
+	else \
+		echo FAILED ; \
+	fi
+	@echo -n " regress: "
+	@if ./regress >/dev/null ; \
 	then \
 		echo OKAY ; \
 	else \
