fix kqueue problem
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@50 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,6 @@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
+CFLAGS += -Wall -g -O2
 SUBDIRS = . sample test
 
 EXTRA_DIST = acconfig.h evsignal.h \
