--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,18 +4,19 @@ LDADD = -L.. -levent
 CPPFPLAGS = -I.. 
 CFLAGS = -I../compat -g -Wall
 
-noinst_PROGRAMS = test-eof test-weof test-time regress
+noinst_PROGRAMS = test-eof test-weof test-time regress bench
 
 test_eof_sources = test-eof.c
 test_weof_sources = test-weof.c
 test_time_sources = test-time.c
 regress_sources = regress.c
+bench_sources = bench.c
 
 DISTCLEANFILES = *~
 
 all:	test
 
-test: $(noinst_PROGRAMS)
+test: test-eof test-weof test-time regress
 	@echo "Running tests:"
 	@echo -n " test-eof: "
 	@if ./test-eof >/dev/null ; \
