--- a/Makefile.am
+++ b/Makefile.am
@@ -3,9 +3,13 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 CFLAGS += -Wall -g -O2
 SUBDIRS = . sample test
 
-EXTRA_DIST = acconfig.h evsignal.h \
-	     test/Makefile.in compat/err.h compat/sys/queue.h \
-             compat/sys/tree.h compat/sys/_time.h
+EXTRA_DIST = acconfig.h epoll.c err.c event.h kqueue.c select.c \
+	epoll_sub.c evsignal.h poll.c signal.c event.3 \
+	sample/Makefile.am sample/Makefile.in sample/event-test.c \
+	sample/signal-test.c sample/time-test.c \
+	test/Makefile.am test/Makefile.in test/bench.c test/regress.c \
+	test/test-eof.c test/test-weof.c test/test-time.c \
+	compat/err.h compat/sys/queue.h compat/sys/tree.h compat/sys/_time.h
 
 lib_LIBRARIES = libevent.a
 
