--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@ dnl configure.in for libevent
 dnl Dug Song <dugsong@monkey.org>
 AC_INIT(event.c)
 
-AM_INIT_AUTOMAKE(libevent,0.7)
+AM_INIT_AUTOMAKE(libevent,0.7a)
 AM_CONFIG_HEADER(config.h)
 
 dnl Initialize prefix.
