--- a/configure.in
+++ b/configure.in
@@ -17,6 +17,11 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_PROG_LN_S
 
+dnl Check for optional stuff
+AC_ARG_WITH(rtsig,
+  [  --with-rtsig		compile with support for real time signals (experimental)],
+  [usertsig=yes], [usertsig=no])
+
 dnl Checks for libraries.
 AC_CHECK_LIB(socket, socket)
 
@@ -73,7 +78,9 @@ if test "x$havepoll" = "xyes" ; then
 	AC_LIBOBJ(poll)
 	needsignal=yes
 
-	AC_CHECK_FUNCS(sigtimedwait, [havertsig=yes], )
+	if test "x$usertsig" = "xyes" ; then
+		AC_CHECK_FUNCS(sigtimedwait, [havertsig=yes], )
+	fi
 fi
 if test "x$havertsig" = "xyes" ; then
 	AC_MSG_CHECKING(for F_SETSIG in fcntl.h)
