provided buffered events
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@95 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@ EXTRA_DIST = acconfig.h err.c event.h evsignal.h event.3 kqueue.c \
 
 lib_LIBRARIES = libevent.a
 
-libevent_a_SOURCES = event.c buffer.c
+libevent_a_SOURCES = event.c buffer.c evbuffer.c
 libevent_a_LIBADD = @LIBOBJS@
 
 include_HEADERS = event.h
