--- a/configure.in
+++ b/configure.in
@@ -17,6 +17,12 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_PROG_LN_S
 
+AC_PROG_GCC_TRADITIONAL
+if test "$GCC" = yes ; then
+        CFLAGS="$CFLAGS -Wall"
+fi
+
+
 dnl Check for optional stuff
 AC_ARG_WITH(rtsig,
   [  --with-rtsig		compile with support for real time signals (experimental)],
@@ -58,6 +64,8 @@ if test "x$ac_cv_header_sys_time_h" = "xyes"; then
 fi
 
 dnl Checks for typedefs, structures, and compiler characteristics.
+AC_C_CONST
+AC_C_INLINE
 AC_HEADER_TIME
 
 dnl Checks for library functions.
