make it compile on solaris
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@112 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 
 LDADD = -L.. -levent
 CPPFPLAGS = -I.. 
-CFLAGS = -I../compat -Wall @CFLAGS@
+CFLAGS = -I../compat @CFLAGS@
 
 noinst_PROGRAMS = test-init test-eof test-weof test-time regress bench
 
