make a separate verify target
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@124 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -10,4 +10,6 @@ event_test_sources = event-test.c
 time_test_sources = time-test.c
 signal_test_sources = signal-test.c
 
+verify:
+
 DISTCLEANFILES = *~
