fix rule that depended on obsolete libevent.a
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@159 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,7 @@ INCLUDES = -Icompat
 
 man_MANS = event.3
 
-verify: libevent.a
+verify: libevent.la
 	cd $(srcdir)/test && make verify	
 
 DISTCLEANFILES = *~
