I often need some very simple HTTP functionality, so this is a first stab at integrating something really simple with HTTP.  The interface is still evolving as I start messing with it.  Not all the interfaces are properly exported yet.
I am also trying to figure out how to intelligently hide the details about
the different structures from users, so that that things can be changed
around later.


git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@196 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -13,7 +13,8 @@ test_init_SOURCES = test-init.c
 test_eof_SOURCES = test-eof.c
 test_weof_SOURCES = test-weof.c
 test_time_SOURCES = test-time.c
-regress_SOURCES = regress.c regress.gen.c regress.gen.h
+regress_SOURCES = regress.c regress.h regress_http.c \
+	regress.gen.c regress.gen.h
 bench_SOURCES = bench.c
 
 regress.gen.c regress.gen.h: regress.rpc
