provide strlcpy for the unenlightened libcs
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@203 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/configure.in
+++ b/configure.in
@@ -118,6 +118,7 @@ AC_HEADER_TIME
 
 dnl Checks for library functions.
 AC_CHECK_FUNCS(gettimeofday vasprintf fcntl)
+AC_REPLACE_FUNCS(strlcpy)
 
 AC_MSG_CHECKING(for F_SETFD in fcntl.h)
 AC_EGREP_CPP(yes,
