use clock_gettime if available from Claudio Jeker <claudio@openbsd.org>
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@209 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/configure.in
+++ b/configure.in
@@ -117,7 +117,7 @@ AC_C_INLINE
 AC_HEADER_TIME
 
 dnl Checks for library functions.
-AC_CHECK_FUNCS(gettimeofday vasprintf fcntl)
+AC_CHECK_FUNCS(gettimeofday vasprintf fcntl clock_gettime)
 AC_REPLACE_FUNCS(strlcpy)
 
 AC_MSG_CHECKING(for F_SETFD in fcntl.h)
