--- a/Makefile.am
+++ b/Makefile.am
@@ -24,11 +24,11 @@ EXTRA_DIST = acconfig.h event.h event-internal.h log.h evsignal.h event.3 \
 lib_LTLIBRARIES = libevent.la
 
 libevent_la_SOURCES = event.c buffer.c evbuffer.c log.c event_tagging.c \
-	 http.c http-internal.h
+	 http.c evhttp.h http-internal.h
 libevent_la_LIBADD = @LTLIBOBJS@
 libevent_la_LDFLAGS = -release @VERSION@ -version-info 1:3:0
 
-include_HEADERS = event.h
+include_HEADERS = event.h evhttp.h
 
 INCLUDES = -Icompat
 
