reorganization of the http functionality; we separate http handling into a connection object and a request object; also make it clear which buffers are used for input and output; unittests not complete yet.
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@217 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -18,7 +18,7 @@ regress_SOURCES = regress.c regress.h regress_http.c \
 bench_SOURCES = bench.c
 
 regress.gen.c regress.gen.h: regress.rpc
-	../event_rpcgen.py regress.rpc
+	../event_rpcgen.py regress.rpc || echo "No Python installed"
 
 DISTCLEANFILES = *~
 CLEANFILES = regress.gen.h regress.gen.c
