--- a/Makefile.am
+++ b/Makefile.am
@@ -15,11 +15,10 @@ EXTRA_DIST = acconfig.h event.h event-internal.h log.h evsignal.h event.3 \
 	compat/sys/queue.h compat/sys/tree.h compat/sys/_time.h \
 	WIN32-Code WIN32-Code/config.h WIN32-Code/misc.c \
 	WIN32-Code/win32.c WIN32-Code/misc.h \
-	WIN32-Prj WIN32-Prj/event_test WIN32-Prj/event_test/event_test.dsp \
+	WIN32-Prj/event_test/event_test.dsp \
 	WIN32-Prj/event_test/test.txt WIN32-Prj/libevent.dsp \
-	WIN32-Prj/libevent.dsw WIN32-Prj/signal_test \
-	WIN32-Prj/signal_test/signal_test.dsp WIN32-Prj/time_test \
-	WIN32-Prj/time_test/time_test.dsp
+	WIN32-Prj/libevent.dsw WIN32-Prj/signal_test/signal_test.dsp \
+	WIN32-Prj/time_test WIN32-Prj/time_test/time_test.dsp
 
 lib_LTLIBRARIES = libevent.la
 
