--- a/Makefile.am
+++ b/Makefile.am
@@ -13,12 +13,12 @@ EXTRA_DIST = acconfig.h event.h event-internal.h log.h evsignal.h event.3 \
 	test/test-eof.c test/test-weof.c test/test-time.c \
 	test/test-init.c test/test.sh \
 	compat/sys/queue.h compat/sys/tree.h compat/sys/_time.h \
-	WIN32-Code WIN32-Code/config.h WIN32-Code/misc.c \
+	WIN32-Code/config.h WIN32-Code/misc.c \
 	WIN32-Code/win32.c WIN32-Code/misc.h \
 	WIN32-Prj/event_test/event_test.dsp \
 	WIN32-Prj/event_test/test.txt WIN32-Prj/libevent.dsp \
 	WIN32-Prj/libevent.dsw WIN32-Prj/signal_test/signal_test.dsp \
-	WIN32-Prj/time_test WIN32-Prj/time_test/time_test.dsp
+	WIN32-Prj/time_test/time_test.dsp
 
 lib_LTLIBRARIES = libevent.la
 
@@ -27,7 +27,7 @@ libevent_la_SOURCES = event.c buffer.c evbuffer.c log.c event_tagging.c \
 libevent_la_LIBADD = @LTLIBOBJS@
 libevent_la_LDFLAGS = -release @VERSION@ -version-info 1:3:0
 
-include_HEADERS = event.h evhttp.h
+include_HEADERS = event.h evhttp.h evdns.h
 
 INCLUDES = -Icompat
 
