--- a/Makefile.am
+++ b/Makefile.am
@@ -41,7 +41,8 @@ endif
 
 libevent_la_SOURCES = event.c buffer.c evbuffer.c log.c event_tagging.c \
 	http.c evhttp.h http-internal.h evdns.c evdns.h evrpc.c strlcpy.c \
-	evrpc.h evrpc-internal.h strlcpy-internal.h $(SYS_SRC)
+	strlcpy-internal.h evrpc.h evrpc-internal.h strlcpy-internal.h \
+	$(SYS_SRC)
 libevent_la_LIBADD = @LTLIBOBJS@ $(SYS_LIBS)
 libevent_la_LDFLAGS = -release @VERSION@ -version-info 1:3:0
 
