--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,7 @@ EXTRA_DIST = acconfig.h event.h event-internal.h log.h evsignal.h evdns.3 \
 	test/test-eof.c test/test-weof.c test/test-time.c \
 	test/test-init.c test/test.sh \
 	compat/sys/queue.h compat/sys/tree.h compat/sys/_time.h \
-	WIN32-Code/config.h WIN32-Code/misc.c \
+	WIN32-Code/evconfig.h WIN32-Code/misc.c \
 	WIN32-Code/win32.c WIN32-Code/misc.h \
 	WIN32-Prj/event_test/event_test.dsp \
 	WIN32-Prj/event_test/test.txt WIN32-Prj/libevent.dsp \
@@ -46,7 +46,7 @@ libevent_la_SOURCES = event.c buffer.c evbuffer.c log.c event_tagging.c \
 libevent_la_LIBADD = @LTLIBOBJS@ $(SYS_LIBS)
 libevent_la_LDFLAGS = -release @VERSION@ -version-info 1:3:0
 
-include_HEADERS = event.h evhttp.h evdns.h
+include_HEADERS = event.h evhttp.h evdns.h evconfig.h
 
 INCLUDES = -Icompat $(SYS_INCLUDES)
 
