--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 
 LDADD = ../libevent.la
 CPPFPLAGS = -I.. 
-CFLAGS = -I../compat
+CFLAGS = -I../compat -I..
 
 noinst_PROGRAMS = event-test time-test signal-test
 
