rolling back r339: evconfig.h does not work
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@341 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ dnl Dug Song <dugsong@monkey.org>
 AC_INIT(event.c)
 
 AM_INIT_AUTOMAKE(libevent,1.3a)
-AM_CONFIG_HEADER(evconfig.h)
+AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
 dnl Initialize prefix.
