remove tree.h from EXTRA_DIST; from Charles Kerr
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@484 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,7 +38,7 @@ EXTRA_DIST = acconfig.h event.h event-internal.h log.h evsignal.h evdns.3 \
 	test/Makefile.am test/Makefile.in test/bench.c test/regress.c \
 	test/test-eof.c test/test-weof.c test/test-time.c \
 	test/test-init.c test/test.sh \
-	compat/sys/queue.h compat/sys/tree.h compat/sys/_time.h \
+	compat/sys/queue.h compat/sys/_time.h \
 	WIN32-Code/config.h WIN32-Code/misc.c \
 	WIN32-Code/win32.c WIN32-Code/misc.h \
 	WIN32-Prj/event_test/event_test.dsp \
